[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/GameOverScreen.gd" type="Script" id=1]
[ext_resource path="res://UI/m5x7.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.329412, 0.0823529, 0.0823529, 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
extra_spacing_top = 13
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 320.0
margin_bottom = 180.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 320.0
margin_bottom = 180.0

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_right = 320.0
margin_bottom = 180.0
custom_constants/separation = 50

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/Rows"]
margin_right = 320.0
margin_bottom = 39.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 2 )
text = "Game Over"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 89.0
margin_right = 320.0
margin_bottom = 147.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Rows/CenterContainer"]
margin_left = 133.0
margin_right = 187.0
margin_bottom = 58.0
custom_constants/separation = 20
alignment = 1

[node name="RestartButton" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_right = 54.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 3 )
text = "RESTART"

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 54.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 4 )
text = "QUIT"

[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
